--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.common-card {
+    border: 1.13px solid #E4E7EC;
+    border-radius: 12.56px;
+    padding: 20px;
+    background-color: white;
+}
+
+.card-title-large {
+    font-size: 20px;
+    font-weight: 600;
+    color: #000000
+}
+
+.section-heading {
+    font-weight: 700; font-size: 24px; color: #000000
+}
