--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,57 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@font-face {
+    font-family: 'Open Sans Condensed';
+    src: url('/fonts/OpenSans-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans Condensed';
+    src: url('/fonts/OpenSans-ExtraBold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans Condensed';
+    src: url('/fonts/OpenSans-Light.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans Condensed';
+    src: url('/fonts/OpenSans-Medium.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans Condensed';
+    src: url('/fonts/OpenSans-Regular.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans Condensed';
+    src: url('/fonts/OpenSans-SemiBold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans Condensed';
+    src: url('/fonts/OpenSans-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+
 .common-card {
     border: 1.13px solid #E4E7EC;
     border-radius: 12.56px;
@@ -16,5 +67,7 @@
 }
 
 .section-heading {
-    font-weight: 700; font-size: 24px; color: #000000
+    font-weight: 700;
+    font-size: 24px;
+    color: #000000
 }
