Apply finishing touches on components

--- a/app/_components/hr-admin/pages/payroll-management/pages/overview/style.css
+++ b/app/_components/hr-admin/pages/payroll-management/pages/overview/style.css
@@ -9,3 +9,11 @@
         margin-right: 40px;
     }
 }
+
+button.overview-calendar .rs-input-group {
+    border-width: 0 !important;
+}
+
+button.overview-calendar .rs-input {
+    display: none !important;
+}
