--- a/app/globals.css
+++ b/app/globals.css
@@ -55,6 +55,9 @@
     font-style: normal;
 }
 
+.btn-active{
+    @apply active:scale-95 transition-all duration-300;
+}
 
 .common-card {
     border: 1.13px solid #E4E7EC;
