--- a/app/globals.css
+++ b/app/globals.css
@@ -110,3 +110,13 @@
                 padding: 6px 20px !important;
                 text-transform: none !important;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
