--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "react-datepicker/dist/react-datepicker.css";
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 
 @tailwind base;
@@ -6,54 +7,10 @@
 @tailwind utilities;
 
 
-@font-face {
-    font-family: 'Open Sans Condensed';
-    src: url('/fonts/OpenSans-Bold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-}
 
-@font-face {
-    font-family: 'Open Sans Condensed';
-    src: url('/fonts/OpenSans-ExtraBold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-}
 
-@font-face {
-    font-family: 'Open Sans Condensed';
-    src: url('/fonts/OpenSans-Light.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-}
 
-@font-face {
-    font-family: 'Open Sans Condensed';
-    src: url('/fonts/OpenSans-Medium.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-}
 
-@font-face {
-    font-family: 'Open Sans Condensed';
-    src: url('/fonts/OpenSans-Regular.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Open Sans Condensed';
-    src: url('/fonts/OpenSans-SemiBold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Open Sans Condensed';
-    src: url('/fonts/OpenSans-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
 
 .btn-active{
     @apply active:scale-95 transition-all duration-300;
