--- a/app/globals.css
+++ b/app/globals.css
@@ -82,9 +82,13 @@ input[type="number"] {
 }
 
 .btn-primary {
-    @apply bg-primary text-white;
+    @apply bg-primary border-2 border-primary text-white;
 }
 
 .btn-secondary {
-    @apply bg-white border border-gray-400;
+    @apply bg-white border-2 border-gray-400;
+}
+
+.btn-inactive {
+    @apply border-2 border-gray-400 bg-gray-300 text-gray-500;
 }
