--- a/app/globals.css
+++ b/app/globals.css
@@ -108,3 +108,7 @@
   padding: 6px 20px !important;
   text-transform: none !important;
 }
+
+.css-1u9des2-indicatorSeparator {
+  display: none !important;
+}
