--- a/app/_components/employee/pages/upcoming-widget/big-calendar/styles.css
+++ b/app/_components/employee/pages/upcoming-widget/big-calendar/styles.css
@@ -14,6 +14,11 @@
     display: none;
   } */
 
+.rbc-event-content {
+  text-overflow: initial !important; 
+  white-space: wrap !important;
+}
+
 @media only screen and (min-width: 768px) {
   .picker-indicator-container {
     flex-direction: column;
